--- a/src/App.css
+++ b/src/App.css
@@ -22,23 +22,24 @@ h2 {
 }
 
 .site-footer {
-  background-image: linear-gradient( #474641, #807f7b, #474744);
+  background-image: linear-gradient(#CEC8FF, white);
   padding: 20px 0;
 }
 
+
 .jumbotron {
   margin: 0;
-  padding: 1px;
-  background-image: linear-gradient(to right, #474641, #807f7b, #474744);    
+  padding: 30px;
+  background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
+  color: white;
 }
 
-.display-3 {
-  position: relative;
-  left: -150px;
+.jumbotron h2 {
+  color: #CEC8FF;
 }
 
 .navbar-dark {
-  background-color: #0804f1;
+  background-color: #901CAD;
 }
 
 .page-enter {
